<?xml version="1.0"?>
<package>
  <name>rospy_message_converter</name>
  <version>0.5.0</version>
  <description>Converts between Python dictionaries and JSON to rospy messages.</description>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rospy_message_converter</url>
  <url type="repository">https://github.com/uos/rospy_message_converter</url>
  <url type="bugtracker">https://github.com/uos/rospy_message_converter/issues</url>
  <author email="baalexander@gmail.com">Brandon Alexander</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>std_srvs</test_depend>
</package>
