<?xml version="1.0"?>
<package format="3">
  <name>rospy_message_converter</name>
  <version>0.5.9</version>
  <description>Converts between Python dictionaries and JSON to rospy messages.</description>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rospy_message_converter</url>
  <url type="repository">https://github.com/DFKI-NI/rospy_message_converter</url>
  <url type="bugtracker">https://github.com/DFKI-NI/rospy_message_converter/issues</url>
  <author email="baalexander@gmail.com">Brandon Alexander</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</test_depend>
</package>
